<resources>
    <string name="demo_activity_warning_1">Число не должно превышать 10000</string>
    <string name="demo_activity_warning_2">Число не должно превышать 19</string>
    <string name="demo_activity_result">Result: %d</string>

    <string name="image_name">profile_photo</string>

    <string name="app_name">Timetable for HSE PE</string>
    <string name="timetable_for_students">Расписание для студентов</string>
    <string name="timetable_for_professors">Расписание для преподавателей</string>
    <string name="settings">Настройки</string>
    <string name="hse_full_name">Национальный исследовательский университет</string>

    <string name="btnSum">Сумма</string>
    <string name="btnMultiplyEven">Произведение четных</string>
    <string name="enter_a_number">Введите число</string>

    <string name="groupChoice">Выберите группу:</string>
    <string name="professorChoice">Выберите преподавателя:</string>
    <string name="nowText">Сейчас: </string>
    <string name="todayDate">время, День недели </string>
    <string name="stubStatus">Нет пар</string>
    <string name="stubStatusRunning">Идет пара</string>
    <string name="stubSubject">Дисциплина</string>
    <string name="stubCabinet">Кабинет</string>
    <string name="stubCorp">Корпус</string>
    <string name="stubProfessor">Преподаватель</string>
    <string name="stubGroup">Группа</string>
    <string name="btnDayTimetable">Расписание\nна день</string>
    <string name="btnWeekTimetable">Расписание\nна неделю</string>

    <string name="choosePhoto">Укажите фото</string>
    <string name="makePhoto">Сделать фото</string>
    <string name="photoDescription">аватар</string>
    <string name="enterName">Укажите свое имя</string>
    <string name="currentLight">Текущая освещенность:</string>
    <string name="save">Сохранить</string>

    <string name="currentLux">%1$f lux</string>
    <string name="permissionText">Нужно предоставить права</string>
    <string name="permissionCamera">Для снятия фото нужно предоставить права на фото</string>

    <string name="scheduleHeader">День недели, дата</string>
    <string name="scheduleStart">10:30</string>
    <string name="scheduleEnd">11:50</string>
    <string name="scheduleType">Тип</string>
    <string name="scheduleName">Название</string>
    <string name="schedulePlace">Кабинет</string>
    <string name="scheduleProfessor">Преподаватель</string>
    <string name="scheduleTitle">Заголовок</string>

    <string name="typePractice">Практическое занятие</string>
    <string name="typeLection">Лекция</string>

    <string name="iconHSE">HSE</string>
    <string name="urlTime">https://api.ipgeolocation.io/ipgeo?apiKey=b03018f75ed94023a005637878ec0977</string>
</resources>