<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="30"
    style="@style/UserInterfaceStyle">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/professorChoice"
                style="@style/TextViewStyle"
                android:layout_marginVertical="10dp"
                android:layout_weight="2"
                android:text="@string/professorChoice"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                style="@style/TextViewStyle"
                android:id="@+id/groupList"
                android:layout_weight="1"
                android:contentDescription="@string/groupChoice"
                android:minHeight="48dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nowText"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:paddingEnd = "0dp"
                    android:text="@string/nowText"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    style="@style/TextViewStyle"
                    android:text="@string/todayDate" />

            </LinearLayout>

            <TextView
                android:id="@+id/status"
                style="@style/TextViewStyle"
                android:layout_weight="2"
                android:text="@string/stubStatus" />

            <TextView
                android:id="@+id/subject"
                style="@style/TextViewStyle"
                android:layout_weight="2"
                android:text="@string/stubSubject" />

            <TextView
                android:id="@+id/cabinet"
                style="@style/TextViewStyle"
                android:layout_weight="2"
                android:text="@string/stubCabinet" />

            <TextView
                android:id="@+id/corp"
                style="@style/TextViewStyle"
                android:layout_weight="2"
                android:text="@string/stubCorp" />

            <TextView
                android:id="@+id/professor"
                style="@style/TextViewStyle"
                android:layout_weight="2"
                android:text="@string/stubProfessor" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnDayTimetable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/btnDayTimetable" />

                <Button
                    android:id="@+id/btnWeekTimetable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/btnWeekTimetable" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:contentDescription="@string/app_name"
        style="@style/BackButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>