<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/start"
            style="@style/simpleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/scheduleStart"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/end"
            style="@style/simpleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/scheduleEnd"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/vertical_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type"
            style="@style/simpleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/scheduleType"
            android:textAllCaps="true"
            android:textColor="@color/resolutionBlue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            style="@style/headerTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/scheduleName"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/place"
            style="@style/simpleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedulePlace"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/professor_name"
            style="@style/simpleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="casual"
            android:text="@string/scheduleProfessor"
            android:textColor="@color/gray" />
    </LinearLayout>

</LinearLayout>