<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/UserInterfaceStyle"
    android:id="@+id/mainLayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="11">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvChoosePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choosePhoto"
                android:theme="@style/headerTextViewStyle" />

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photoDescription"
                android:scaleType="fitCenter"
                android:src="@drawable/profile_picture_basic"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makePhoto"
                android:theme="@style/ButtonStyle" />
        </LinearLayout>


        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Укажите свое имя"
                android:ems="10"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false"
                android:text="@string/enterName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvCurrentLux"
                style="@style/simpleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentLight" />

            <TextView
                android:id="@+id/tvLuxAmount"
                style="@style/headerTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </TableRow>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/save"
        android:textAlignment="center"
        android:theme="@style/AdditionalButtonStyle" />

    <ListView
        android:id="@+id/sensorsList"
        style="@style/simpleTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>