<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:padding="10dp"
        android:stretchColumns="0,1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/tvNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/enter_a_number"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="10dp"
                android:insetTop="10dp"
                android:insetRight="10dp"
                android:insetBottom="10dp"
                android:padding="10dp"
                android:text="@string/btnSum" />

            <Button
                android:id="@+id/btnMultiplyEven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="10dp"
                android:insetTop="10dp"
                android:insetRight="10dp"
                android:insetBottom="10dp"
                android:text="@string/btnMultiplyEven" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>